{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 3,
  "lineage": "54e58451-3dc2-951f-1cf5-5e22e8165e55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752605837:security-group/sg-059af8eb596d968ba",
            "description": "Security group for Dremio.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress endpoint for Dremio EC2 Security Group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-059af8eb596d968ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Self ingress endpoint for Dremio EC2 Security Group",
                "from_port": 45678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 45678
              }
            ],
            "name": "sc-dremio-config-DremioEC2SecurityGroup-SpreA33VCUf5",
            "name_prefix": "",
            "owner_id": "050752605837",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080cafe98dca712ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752605837:security-group/sg-00e183e1085296f96",
            "description": "Security group for Dremio VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "Security group egress for Dremio VPC endpoint",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e183e1085296f96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Security group ingress for Dremio VPC endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059af8eb596d968ba"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sc-dremio-config-DremioEC2VPCEndpointSecurityGroup-51LEjvQhhmlh",
            "name_prefix": "",
            "owner_id": "050752605837",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080cafe98dca712ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dremio_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752605837:vpc-endpoint/vpce-06d7b584e11307124",
            "dns_entry": [
              {
                "dns_name": "vpce-06d7b584e11307124-35vat12j.vpce-svc-0646dfd77e827498f.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06d7b584e11307124-35vat12j-us-east-1a.vpce-svc-0646dfd77e827498f.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06d7b584e11307124-35vat12j-us-east-1c.vpce-svc-0646dfd77e827498f.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06d7b584e11307124-35vat12j-us-east-1b.vpce-svc-0646dfd77e827498f.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06d7b584e11307124",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002dcc20df365a9f8",
              "eni-033c9e7d337f7b014",
              "eni-067a68f8d8bfc66c1"
            ],
            "owner_id": "050752605837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00e183e1085296f96"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0646dfd77e827498f",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.21.1.50",
                "subnet_id": "subnet-0021c4d331b0743e1"
              },
              {
                "ipv4": "172.21.2.84",
                "subnet_id": "subnet-0d9cff25e6508107b"
              },
              {
                "ipv4": "172.21.3.124",
                "subnet_id": "subnet-035c55ac204afcd19"
              }
            ],
            "subnet_ids": [
              "subnet-0021c4d331b0743e1",
              "subnet-035c55ac204afcd19",
              "subnet-0d9cff25e6508107b"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-080cafe98dca712ca"
          }
        }
      ]
    }
  ]
}